Layout bug

--- a/layout/assets/main.less
+++ b/layout/assets/main.less
@@ -279,6 +279,10 @@ ul, ol {
 	margin-left: 20/@em;
 }
 
+#nav ul {
+	margin-left: 0;
+}
+
 	#nav a:active, #nav a:active .icon {
 		background: @aside;
 	}
